# homemade-cpu-raytracer

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  run.sh
data/: README.md  manifest.json
outputs/reports/: all_methods.json  convergence.json  path-tracing.json  radiosity.json  rasterization.json  ray-casting.json  validation.json  whitted.json
params/: README.md  default.toml
scripts/: download_data.py  generate_comparison.py  publish_readme_images.py
specs/: PRD.md  PROJECT_TREE.md
src/renderer/: __init__.py  __main__.py  cli.py  config.py  workflows.py
src/renderer/core/: __init__.py  camera.py  color.py  ray.py  types.py
src/renderer/geometry/: __init__.py  intersection.py  mesh.py  projection.py
src/renderer/lights/: __init__.py  area.py  point.py
src/renderer/materials/: __init__.py  base.py  dielectric.py  diffuse.py  mirror.py
src/renderer/methods/: __init__.py
src/renderer/output/: __init__.py  charts.py  image.py  metadata.py  montage.py
src/renderer/parallel/: __init__.py  executor.py  resources.py  seeds.py  thread_limits.py  tiles.py
src/renderer/scenes/: __init__.py  cornell_box.py  registry.py  scene.py  white_furnace.py
src/renderer/validation/: __init__.py  convergence.py  energy.py  (+1 more)
tests/integration/: test_parallel_render.py  test_workflows.py
tests/unit/: test_config.py  test_convergence.py  test_core.py  test_geometry_and_scene.py  test_output.py  test_parallel.py  test_params.py  test_path_tracing.py  test_radiosity.py  test_rasterization.py  test_ray_casting.py  test_whitted.py
(+21 files in other folders)
