[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homemade-cpu-renderer"
version = "0.1.0"
description = "A maintainable CPU renderer for comparing five rendering methods in a Cornell Box."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "numba>=0.61",
    "numpy>=2.1",
    "Pillow>=11.0",
    "psutil>=6.1",
    "scipy>=1.14",
    "tqdm>=4.67",
    "trimesh>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]
embree = [
    "embreex>=2.17.7.post6",
]

[project.scripts]
homemade-renderer = "renderer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
